# pmeshlab

./: .env  .gitignore  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-image.yml
PyMeshLab/: mesh.py
docker/sandbox/: Dockerfile
docker/vanilla/: Dockerfile
pmeshlab/: __init__.py
